# project-chimera

./: .coderabbit.yaml  Dockerfile  Makefile  pyproject.toml
.cursor/: rules
.github/workflows/: main.yml
research/: architecture_strategy.md  mcp_sense_log.md  notes.md  tooling_strategy.md
skills/: README.md  skill_fetch_trends.py  skill_generate_content.py  skill_schedule_post.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
